...
    <PreferenceCategory app:title="@string/settings_duration">

        <ListPreference
            app:defaultValue="12hours"
            app:entries="@array/time_entries"
            app:entryValues="@array/time_values"
            app:key="time"
            app:title="@string/settings_time"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="dayDash"
            app:entries="@array/date_entries"
...
